--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main class="container m-4 p-1">
+  <main class="container m-5 p-1">
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-4">
@@ -43,59 +43,14 @@
     </div>
 
     <hr>
-
+<div>
+  <div class="col-6">
+    <div class="btn-group-vertical" id="buttonContainer">
+    </div>
+  </div>
+</div>
     <!-- Template of the list of previous cities -->
-    <div class="row">
-      <div class="col-2">
-        <div class="btn-group-vertical">
-          <button type="button" class="btn btn-secondary btn-block">Previous city</button>
-        </div>
-      </div>
-      <div class="col-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
+    <div class="row" id="forecastContainer">
     </div>
 
 
