Added weather content to forecast. Fixed row UI

--- a/index.html
+++ b/index.html
@@ -43,17 +43,20 @@
     </div>
 
     <hr>
-<div>
-  <div class="col-6">
+<div class="row">
+  <div class="col-12 col-lg-2">
     <div class="btn-group-vertical" id="buttonContainer">
     </div>
   </div>
-</div>
+
     <!-- Template of the list of previous cities -->
+<div class="col-12 col-lg-10">
+
+
     <div class="row" id="forecastContainer">
     </div>
-
-
+  </div>
+</div>
   </main>
 
 
