Implemented local storage to save searches. Added functional clear history button.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div class="form-group p-2">
               <input type="text" id="cityEntry" class="form-control" placeholder="City Name" />
             </div>
-            <button class="btn btn-success m-2">Search</button>
+            <button class="btn btn-success m-2" id="searchBtn">Search</button>
+            <button class="btn btn-danger m-2" id="clearBtn">Clear History</button>
           </form>
         </div>
         <!-- Template for what needs to be appended -->
